--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/grandstander": "^5.0.19",
+    "@fontsource/nunito": "^5.0.16",
     "autoprefixer": "^10.4.17",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
