--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.1"
